add first tests